generated/MiniGoParser.py
# Generated from C:/Users/Ismael/Documents/Semestres/V semestre/Compiladores e interpretes/Proyecto final/MiniGoCompiler/MiniGo.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiniGoParser ( Parser ):

    grammarFileName = "MiniGo.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'package'", "'var'", "'type'", "'func'", 
                     "'struct'", "'if'", "'else'", "'for'", "'switch'", 
                     "'case'", "'default'", "'break'", "'continue'", "'return'", 
                     "'print'", "'println'", "'append'", "'len'", "'cap'", 
                     "':='", "'+='", "'-='", "'*='", "'/='", "'%='", "'&='", 
                     "'|='", "'^='", "'<<='", "'>>='", "'&^='", "'=='", 
                     "'!='", "'<='", "'>='", "'&&'", "'||'", "'++'", "'--'", 
                     "'<<'", "'>>'", "'&^'", "'='", "'<'", "'>'", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'&'", "'|'", "'^'", "'!'", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'", "','", "';'", 
                     "':'", "'.'" ]

    symbolicNames = [ "<INVALID>", "PACKAGE", "VAR", "TYPE", "FUNC", "STRUCT", 
                      "IF", "ELSE", "FOR", "SWITCH", "CASE", "DEFAULT", 
                      "BREAK", "CONTINUE", "RETURN", "PRINT", "PRINTLN", 
                      "APPEND", "LEN", "CAP", "DECLARE_ASSIGN", "PLUS_ASSIGN", 
                      "MINUS_ASSIGN", "STAR_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", 
                      "AMP_ASSIGN", "PIPE_ASSIGN", "CARET_ASSIGN", "LSHIFT_ASSIGN", 
                      "RSHIFT_ASSIGN", "BIT_CLEAR_ASSIGN", "EQUALS", "NOT_EQUALS", 
                      "LTE", "GTE", "AND", "LOGICAL_OR", "INC", "DEC", "LSHIFT", 
                      "RSHIFT", "BIT_CLEAR", "ASSIGN", "LT", "GT", "PLUS", 
                      "MINUS", "STAR", "DIV", "MOD", "AMP", "PIPE", "CARET", 
                      "NOT", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", 
                      "RBRACK", "COMMA", "SEMI", "COLON", "DOT", "FLOATLITERAL", 
                      "INTLITERAL", "RUNELITERAL", "RAWSTRINGLITERAL", "INTERPRETEDSTRINGLITERAL", 
                      "IDENTIFIER", "LINE_COMMENT", "BLOCK_COMMENT", "WS" ]

    RULE_root = 0
    RULE_topDeclarationList = 1
    RULE_variableDecl = 2
    RULE_innerVarDecls = 3
    RULE_singleVarDecl = 4
    RULE_singleVarDeclNoExps = 5
    RULE_typeDecl = 6
    RULE_innerTypeDecls = 7
    RULE_singleTypeDecl = 8
    RULE_funcDecl = 9
    RULE_funcFrontDecl = 10
    RULE_funcArgDecls = 11
    RULE_declType = 12
    RULE_sliceDeclType = 13
    RULE_arrayDeclType = 14
    RULE_structDeclType = 15
    RULE_structMemDecls = 16
    RULE_identifierList = 17
    RULE_expressionList = 18
    RULE_expression = 19
    RULE_multiplicativeOp = 20
    RULE_additiveOp = 21
    RULE_relationalOp = 22
    RULE_primaryExpression = 23
    RULE_operand = 24
    RULE_literal = 25
    RULE_index = 26
    RULE_arguments = 27
    RULE_selector = 28
    RULE_appendExpression = 29
    RULE_lengthExpression = 30
    RULE_capExpression = 31
    RULE_statementList = 32
    RULE_block = 33
    RULE_statement = 34
    RULE_simpleStatement = 35
    RULE_nonEmptySimpleStatement = 36
    RULE_assignmentStatement = 37
    RULE_assignmentOp = 38
    RULE_ifStatement = 39
    RULE_loop = 40
    RULE_switchStmt = 41
    RULE_expressionCaseClauseList = 42
    RULE_expressionCaseClause = 43
    RULE_expressionSwitchCase = 44

    ruleNames =  [ "root", "topDeclarationList", "variableDecl", "innerVarDecls", 
                   "singleVarDecl", "singleVarDeclNoExps", "typeDecl", "innerTypeDecls", 
                   "singleTypeDecl", "funcDecl", "funcFrontDecl", "funcArgDecls", 
                   "declType", "sliceDeclType", "arrayDeclType", "structDeclType", 
                   "structMemDecls", "identifierList", "expressionList", 
                   "expression", "multiplicativeOp", "additiveOp", "relationalOp", 
                   "primaryExpression", "operand", "literal", "index", "arguments", 
                   "selector", "appendExpression", "lengthExpression", "capExpression", 
                   "statementList", "block", "statement", "simpleStatement", 
                   "nonEmptySimpleStatement", "assignmentStatement", "assignmentOp", 
                   "ifStatement", "loop", "switchStmt", "expressionCaseClauseList", 
                   "expressionCaseClause", "expressionSwitchCase" ]

    EOF = Token.EOF
    PACKAGE=1
    VAR=2
    TYPE=3
    FUNC=4
    STRUCT=5
    IF=6
    ELSE=7
    FOR=8
    SWITCH=9
    CASE=10
    DEFAULT=11
    BREAK=12
    CONTINUE=13
    RETURN=14
    PRINT=15
    PRINTLN=16
    APPEND=17
    LEN=18
    CAP=19
    DECLARE_ASSIGN=20
    PLUS_ASSIGN=21
    MINUS_ASSIGN=22
    STAR_ASSIGN=23
    DIV_ASSIGN=24
    MOD_ASSIGN=25
    AMP_ASSIGN=26
    PIPE_ASSIGN=27
    CARET_ASSIGN=28
    LSHIFT_ASSIGN=29
    RSHIFT_ASSIGN=30
    BIT_CLEAR_ASSIGN=31
    EQUALS=32
    NOT_EQUALS=33
    LTE=34
    GTE=35
    AND=36
    LOGICAL_OR=37
    INC=38
    DEC=39
    LSHIFT=40
    RSHIFT=41
    BIT_CLEAR=42
    ASSIGN=43
    LT=44
    GT=45
    PLUS=46
    MINUS=47
    STAR=48
    DIV=49
    MOD=50
    AMP=51
    PIPE=52
    CARET=53
    NOT=54
    LPAREN=55
    RPAREN=56
    LBRACE=57
    RBRACE=58
    LBRACK=59
    RBRACK=60
    COMMA=61
    SEMI=62
    COLON=63
    DOT=64
    FLOATLITERAL=65
    INTLITERAL=66
    RUNELITERAL=67
    RAWSTRINGLITERAL=68
    INTERPRETEDSTRINGLITERAL=69
    IDENTIFIER=70
    LINE_COMMENT=71
    BLOCK_COMMENT=72
    WS=73

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PACKAGE(self):
            return self.getToken(MiniGoParser.PACKAGE, 0)

        def IDENTIFIER(self):
            return self.getToken(MiniGoParser.IDENTIFIER, 0)

        def SEMI(self):
            return self.getToken(MiniGoParser.SEMI, 0)

        def topDeclarationList(self):
            return self.getTypedRuleContext(MiniGoParser.TopDeclarationListContext,0)


        def EOF(self):
            return self.getToken(MiniGoParser.EOF, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_root

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = MiniGoParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(MiniGoParser.PACKAGE)
            self.state = 91
            self.match(MiniGoParser.IDENTIFIER)
            self.state = 92
            self.match(MiniGoParser.SEMI)
            self.state = 93
            self.topDeclarationList()
            self.state = 94
            self.match(MiniGoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TopDeclarationListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniGoParser.VariableDeclContext)
            else:
                return self.getTypedRuleContext(MiniGoParser.VariableDeclContext,i)


        def typeDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniGoParser.TypeDeclContext)
            else:
                return self.getTypedRuleContext(MiniGoParser.TypeDeclContext,i)


        def funcDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniGoParser.FuncDeclContext)
            else:
                return self.getTypedRuleContext(MiniGoParser.FuncDeclContext,i)


        def getRuleIndex(self):
            return MiniGoParser.RULE_topDeclarationList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTopDeclarationList" ):
                return visitor.visitTopDeclarationList(self)
            else:
                return visitor.visitChildren(self)




    def topDeclarationList(self):

        localctx = MiniGoParser.TopDeclarationListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_topDeclarationList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 28) != 0):
                self.state = 99
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [2]:
                    self.state = 96
                    self.variableDecl()
                    pass
                elif token in [3]:
                    self.state = 97
                    self.typeDecl()
                    pass
                elif token in [4]:
                    self.state = 98
                    self.funcDecl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MiniGoParser.VAR, 0)

        def singleVarDecl(self):
            return self.getTypedRuleContext(MiniGoParser.SingleVarDeclContext,0)


        def SEMI(self):
            return self.getToken(MiniGoParser.SEMI, 0)

        def LPAREN(self):
            return self.getToken(MiniGoParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(MiniGoParser.RPAREN, 0)

        def innerVarDecls(self):
            return self.getTypedRuleContext(MiniGoParser.InnerVarDeclsContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_variableDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDecl" ):
                return visitor.visitVariableDecl(self)
            else:
                return visitor.visitChildren(self)




    def variableDecl(self):

        localctx = MiniGoParser.VariableDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variableDecl)
        self._la = 0 # Token type
        try:
            self.state = 115
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.match(MiniGoParser.VAR)
                self.state = 105
                self.singleVarDecl()
                self.state = 106
                self.match(MiniGoParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.match(MiniGoParser.VAR)
                self.state = 109
                self.match(MiniGoParser.LPAREN)
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==70:
                    self.state = 110
                    self.innerVarDecls()


                self.state = 113
                self.match(MiniGoParser.RPAREN)
                self.state = 114
                self.match(MiniGoParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InnerVarDeclsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def singleVarDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniGoParser.SingleVarDeclContext)
            else:
                return self.getTypedRuleContext(MiniGoParser.SingleVarDeclContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(MiniGoParser.SEMI)
            else:
                return self.getToken(MiniGoParser.SEMI, i)

        def getRuleIndex(self):
            return MiniGoParser.RULE_innerVarDecls

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInnerVarDecls" ):
                return visitor.visitInnerVarDecls(self)
            else:
                return visitor.visitChildren(self)




    def innerVarDecls(self):

        localctx = MiniGoParser.InnerVarDeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_innerVarDecls)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.singleVarDecl()
            self.state = 118
            self.match(MiniGoParser.SEMI)
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==70:
                self.state = 119
                self.singleVarDecl()
                self.state = 120
                self.match(MiniGoParser.SEMI)
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SingleVarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifierList(self):
            return self.getTypedRuleContext(MiniGoParser.IdentifierListContext,0)


        def declType(self):
            return self.getTypedRuleContext(MiniGoParser.DeclTypeContext,0)


        def ASSIGN(self):
            return self.getToken(MiniGoParser.ASSIGN, 0)

        def expressionList(self):
            return self.getTypedRuleContext(MiniGoParser.ExpressionListContext,0)


        def singleVarDeclNoExps(self):
            return self.getTypedRuleContext(MiniGoParser.SingleVarDeclNoExpsContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_singleVarDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingleVarDecl" ):
                return visitor.visitSingleVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def singleVarDecl(self):

        localctx = MiniGoParser.SingleVarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_singleVarDecl)
        try:
            self.state = 137
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.identifierList()
                self.state = 128
                self.declType()
                self.state = 129
                self.match(MiniGoParser.ASSIGN)
                self.state = 130
                self.expressionList()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.identifierList()
                self.state = 133
                self.match(MiniGoParser.ASSIGN)
                self.state = 134
                self.expressionList()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 136
                self.singleVarDeclNoExps()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SingleVarDeclNoExpsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifierList(self):
            return self.getTypedRuleContext(MiniGoParser.IdentifierListContext,0)


        def declType(self):
            return self.getTypedRuleContext(MiniGoParser.DeclTypeContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_singleVarDeclNoExps

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingleVarDeclNoExps" ):
                return visitor.visitSingleVarDeclNoExps(self)
            else:
                return visitor.visitChildren(self)




    def singleVarDeclNoExps(self):

        localctx = MiniGoParser.SingleVarDeclNoExpsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_singleVarDeclNoExps)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.identifierList()
            self.state = 140
            self.declType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(MiniGoParser.TYPE, 0)

        def singleTypeDecl(self):
            return self.getTypedRuleContext(MiniGoParser.SingleTypeDeclContext,0)


        def SEMI(self):
            return self.getToken(MiniGoParser.SEMI, 0)

        def LPAREN(self):
            return self.getToken(MiniGoParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(MiniGoParser.RPAREN, 0)

        def innerTypeDecls(self):
            return self.getTypedRuleContext(MiniGoParser.InnerTypeDeclsContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_typeDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeDecl" ):
                return visitor.visitTypeDecl(self)
            else:
                return visitor.visitChildren(self)




    def typeDecl(self):

        localctx = MiniGoParser.TypeDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_typeDecl)
        self._la = 0 # Token type
        try:
            self.state = 153
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.match(MiniGoParser.TYPE)
                self.state = 143
                self.singleTypeDecl()
                self.state = 144
                self.match(MiniGoParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 146
                self.match(MiniGoParser.TYPE)
                self.state = 147
                self.match(MiniGoParser.LPAREN)
                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==70:
                    self.state = 148
                    self.innerTypeDecls()


                self.state = 151
                self.match(MiniGoParser.RPAREN)
                self.state = 152
                self.match(MiniGoParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InnerTypeDeclsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def singleTypeDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniGoParser.SingleTypeDeclContext)
            else:
                return self.getTypedRuleContext(MiniGoParser.SingleTypeDeclContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(MiniGoParser.SEMI)
            else:
                return self.getToken(MiniGoParser.SEMI, i)

        def getRuleIndex(self):
            return MiniGoParser.RULE_innerTypeDecls

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInnerTypeDecls" ):
                return visitor.visitInnerTypeDecls(self)
            else:
                return visitor.visitChildren(self)




    def innerTypeDecls(self):

        localctx = MiniGoParser.InnerTypeDeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_innerTypeDecls)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.singleTypeDecl()
            self.state = 156
            self.match(MiniGoParser.SEMI)
            self.state = 162
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==70:
                self.state = 157
                self.singleTypeDecl()
                self.state = 158
                self.match(MiniGoParser.SEMI)
                self.state = 164
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SingleTypeDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MiniGoParser.IDENTIFIER, 0)

        def declType(self):
            return self.getTypedRuleContext(MiniGoParser.DeclTypeContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_singleTypeDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingleTypeDecl" ):
                return visitor.visitSingleTypeDecl(self)
            else:
                return visitor.visitChildren(self)




    def singleTypeDecl(self):

        localctx = MiniGoParser.SingleTypeDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_singleTypeDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.match(MiniGoParser.IDENTIFIER)
            self.state = 166
            self.declType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcFrontDecl(self):
            return self.getTypedRuleContext(MiniGoParser.FuncFrontDeclContext,0)


        def block(self):
            return self.getTypedRuleContext(MiniGoParser.BlockContext,0)


        def SEMI(self):
            return self.getToken(MiniGoParser.SEMI, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_funcDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDecl" ):
                return visitor.visitFuncDecl(self)
            else:
                return visitor.visitChildren(self)




    def funcDecl(self):
